Fixed issue with too long table's anchors

--- a/css/html.css
+++ b/css/html.css
@@ -42,6 +42,9 @@ header {
 
 a {
   text-decoration: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 /* unvisited link */
