--- a/css/table.css
+++ b/css/table.css
@@ -1,6 +1,7 @@
 @import url("./html.css");
 
-table {
+table,
+.table {
   border-collapse: collapse; /* Collapse borders */
   width: 100%; /* Full-width */
   border: 1px solid #ddd; /* Add a grey border */
